--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@storyblok/react": "^5.1.1",
     "axios": "^1.8.4",
     "firebase": "11.6.0",
     "next": "15.2.0",
