--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-qr-code": "^2.0.15"
+    "react-qr-code": "^2.0.15",
+    "storyblok-js-client": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
